Remake of class structure (models.v2), among other things introducing Board class now holding Fields and theirs variables with domains. Constraint Builder now builds constraints for a certain board, using the board's variable's references instead of creating new variables.