@@ -1,38 +1,39 @@
 package haw.is.sudokury;
 
-import static org.junit.Assert.*;
-
-import java.util.Set;
-
+import haw.is.sudokury.constraints.AllDiffConstraint;
+import haw.is.sudokury.constraints.ConstraintVariable;
+import haw.is.sudokury.models.v2.Field;
 import org.junit.Test;
 
-import haw.is.sudokury.constraints.AllDiffConstraint;
-import haw.is.sudokury.constraints.FieldConstraintVariable;
-import haw.is.sudokury.models.Field;
+import java.util.Arrays;
+import java.util.HashSet;
+
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 public class AllDiffConstraintTest {
 
 	@Test
 	public void testIsConsistent() {
-		FieldConstraintVariable f = new FieldConstraintVariable(Field.getField(1, 2));
-		FieldConstraintVariable g = new FieldConstraintVariable(Field.getField(1, 3));
+		ConstraintVariable f = new ConstraintVariable(Field.of(1, 2), new HashSet<>(Arrays.asList(1,2,3)));
+		ConstraintVariable g = new ConstraintVariable(Field.of(1, 3), new HashSet<>(Arrays.asList(2,3,4)));
 		
 		AllDiffConstraint<Field> adc = new AllDiffConstraint<>(f,g);
 		
-		f.getDomain().retainAll(Set.of(1,2,3));
-		g.getDomain().retainAll(Set.of(2,3,4));
+		f.getDomain().retainAll(new HashSet<>(Arrays.asList(1,2,3)));
+		g.getDomain().retainAll(new HashSet<>(Arrays.asList(2,3,4)));
 		assertTrue(adc.isConsistent());
 	}
 
 	@Test
 	public void testIsNotConsistent() {
-		FieldConstraintVariable f = new FieldConstraintVariable(Field.getField(1, 2));
-		FieldConstraintVariable g = new FieldConstraintVariable(Field.getField(1, 3));
+		ConstraintVariable f = new ConstraintVariable(Field.of(1, 2), new HashSet<>(Arrays.asList(1,2,3)));
+		ConstraintVariable g = new ConstraintVariable(Field.of(1, 3), new HashSet<>(Arrays.asList(2)));
 		
 		AllDiffConstraint<Field> adc = new AllDiffConstraint<>(f,g);
 		
-		f.getDomain().retainAll(Set.of(1,2,3));
-		g.getDomain().retainAll(Set.of(2));
+		f.getDomain().retainAll(new HashSet<>(Arrays.asList(1,2,3)));
+		g.getDomain().retainAll(new HashSet<>(Arrays.asList(2)));
 		assertFalse(adc.isConsistent());
 	}
 }
